force-app/main/default/objects/aos_Location_Volunteer__c/aos_Location_Volunteer__c.object-meta.xml
<CustomObject>
    <label>Location Volunteer</label>
    <nameField>
        <displayFormat>LV{00000}</displayFormat>
        <label>Location Volunteer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Volunteers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>