force-app/main/default/objects/aos_Location_Volunteer__c/fields/aos_Location__c.field-meta.xml
<CustomField>
    <fullName>aos_Location__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Location</label>
    <referenceTo>animalos__Location__c</referenceTo>
    <relationshipLabel>Location Volunteers</relationshipLabel>
    <relationshipName>Location_Volunteers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>