force-app/main/default/objects/aos_Location_Volunteer__c/fields/aos_User__c.field-meta.xml
<CustomField>
    <fullName>aos_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>aos_Location_Volunteers</relationshipName>
    <type>Lookup</type>
</CustomField>