force-app/main/default/objects/aos_Location_Volunteer__c/fields/aos_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>aos_Volunteer__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Volunteer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Location Volunteers</relationshipLabel>
    <relationshipName>aos_Volunteer_Animals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>