force-app/main/default/objects/aos_Location_Volunteer__c/validationRules/USER_IS_REQUIRED.validationRule-meta.xml
<ValidationRule>
    <fullName>USER_IS_REQUIRED</fullName>
    <active>false</active>
    <errorConditionFormula>ISNEW() &amp;&amp; ISBLANK(aos_User__c)</errorConditionFormula>
    <errorMessage>Make sure Volunteer has related User.</errorMessage>
</ValidationRule>